--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
-  "name": "ChromePluginTemplate",
-  "version": "3.0",
+  "name": "Chrome extension for Sitecore",
+  "description": "A Chrome extension to make your Sitecore experience a lot better!",
+  "version": "1.0.0",
   "manifest_version": 3,
   "content_scripts": [
     {
@@ -19,14 +20,13 @@
     "storage"
   ],
   "action": {
-    "default_title": "ChromePluginTemplate",
+    "default_title": "Chrome extension for Sitecore",
     "default_icon": {
       "16": "assets/icon-16.png",
       "32": "assets/icon-32.png",
       "48": "assets/icon-48.png",
       "128": "assets/icon-128.png"
-    },
-    "default_popup": "src/popup.html"
+    }
   },
   "icons": {
     "16": "assets/icon-16.png",
