--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Chrome extension for Sitecore",
   "description": "A Chrome extension to make your Sitecore experience a lot better!",
   "homepage_url": "https://github.com/mikelothar/Chrome-Extension-For-Sitecore",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "manifest_version": 3,
   "content_scripts": [
     {
@@ -18,6 +18,8 @@
     "service_worker": "src/background.js"
   },
   "permissions": [
+    "activeTab",
+    "scripting",
     "storage"
   ],
   "action": {
@@ -27,7 +29,8 @@
       "32": "assets/icon-32.png",
       "48": "assets/icon-48.png",
       "128": "assets/icon-128.png"
-    }
+    },
+    "default_popup": "src/popup.html"
   },
   "icons": {
     "16": "assets/icon-16.png",
